# bond

./: .gitignore  README.md  pyproject.toml
data/: backtest_2006_2026_monthly_results.xlsx  backtest_defensive_cash_gated.xlsx  backtest_miyazaki_long_comparison.xlsx  backtest_simple_trend_cash_comparison.xlsx  us_macro_rates_2004_2026.xlsx  us_treasury_macro_for_06.xlsx  us_treasury_yields.xlsx  us_treasury_yields_2004_2026.xlsx
notebook/: 00_data_acquisition_for_06.ipynb  01_data_loading.ipynb  02_miyazaki.ipynb  03_us_treasury_monthly_strategy_2006_2026.ipynb  04_miyazaki_long_comparison.ipynb  05_defensive_cash_gated_strategy.ipynb  06_simple_trend_cash_comparison.ipynb  07_carry_roll_down_diagnostics.ipynb
src/: performance.py
