[project]
name = "0002-macro-strategy"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "fredapi>=0.5.2",
    "ipykernel>=7.2.0",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nasdaq-data-link",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.0",
    "numpy>=2.4.4",
    "openbb>=4.7.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]
